<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="192dp"
        app:statusBarForeground="#FFFFFF">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar"
            app:title="@string/cumulative_gpa"
            app:titleTextColor="@color/White"
            >


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="start">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layoutDirection="locale"
                    android:onClick="back"
                    android:text="@string/semester_gpa"
                    app:icon="@drawable/ic_arrow_back_black_24dp" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            tools:context=".CumulativeGPAFragment">
            <TextView
                android:id="@+id/semtextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/colorDark"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:hint="@string/enter_the_last_cum_gpa"

                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="5"

                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cumET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:hint="@string/enter_its_all_total_hours"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="3"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cumHourET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"

                        android:singleLine="true"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:id="@+id/semesterLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1"
                    android:hint="@string/enter_the_last_sem_gpa"

                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="5"

                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/semET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:singleLine="true"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:hint="@string/enter_its_hours"
                    app:boxBackgroundMode="outline"


                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="3"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/semHourET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"

                        android:singleLine="true"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/cumTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/cumulative_gpa"
                android:textColor="#6200EA"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/calcButton"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="32dp"
                android:onClick="calculate"

                android:text="@string/calculate"
                android:textSize="18sp"
                android:typeface="sans"
                app:cornerRadius="12dp"
                app:icon="@drawable/ic_calculate"
                app:iconGravity="textStart"
                app:iconSize="20dp"
                app:iconTint="@android:color/transparent"
                app:iconTintMode="screen" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
<xyz.hanks.library.bang.SmallBangView
    android:layout_width="96dp"
    android:layout_height="96dp"
    android:id="@+id/like"
    android:layout_gravity="bottom|center"
    >
<!--
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foreground="@drawable/ic_favorite24dp"
        android:foregroundGravity="center"
        app:backgroundTint="#FFFFFF" />
-->
    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/heartselector"
        android:text="Hello World!"/>
</xyz.hanks.library.bang.SmallBangView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>